Fix delete, twitter url not showing in menu bar bug and other minor fixes.

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -57,10 +57,6 @@ button,
   button {
     gap: 4px;
   }
-
-  .follow {
-    display: none;
-  }
 }
 
 .button__group {
@@ -98,9 +94,12 @@ button:disabled {
     border-radius: 8px;
     box-shadow: 0px 4px 154px rgba(34, 34, 34, 0.5);
     position: absolute;
-    animation: .3s ease scale;
+    animation: 0.3s ease scale;
 
     .follow {
+      display: flex !important;
+      gap: 4px;
+
       img {
         max-width: 24px;
       }
